Update: Fixed an issue where the user would click the 'Create a Group Chat' button and it would still appear after searching users on the search bar (not inside the group chat search bar). Also fixed an issue where the input text would not stretch vertically to accomadate to the new hieght (a textarea is used instead). Added transitions with the div buttons. added loaders for searching (used circle loader), and for creating group chats (also used circle loader).

--- a/frontend/src/components/ChatsPage.css
+++ b/frontend/src/components/ChatsPage.css
@@ -200,17 +200,20 @@ button:hover {
   padding: 10px 0;
 
   cursor: pointer;
+  transition: 0.35s;
 }
 
 .chat-button:hover {
   background-color: var(--Silver);
   border-left: 5px solid var(--Azul);
   border-right: 5px solid var(--Azul);
+  transition: 0.35s;
 }
 
 .chat-button:click {
   background-color: var(--Tufts-Blue);
 }
+
 .add-user-button {
   background-color: var(--Mint);
   border: none;
@@ -220,17 +223,43 @@ button:hover {
   padding: 10px 20px;
   margin-right: 10px;
 }
+
+.circle-loader-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1px 5px;
+}
+
+.circle-loader {
+  border: 3px solid #f3f3f3; /* Light grey */
+  border-top: 3px solid var(--Azul); /* Blue */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .start-chat-button-tempate {
   background-color: grey;
   border: none;
   border-radius: 1cm;
 
   margin-left: auto;
-  padding: 10px 20px;
+  margin-left: 5px;
   margin-right: 10px;
 
   width: 100px;
-  height: 30px;
+  height: 35px;
 }
 
 .add-user-button:hover {
@@ -260,15 +289,16 @@ button:hover {
   border-radius: 50%;
   padding: 0 15px 0 10px;
 }
-.picture-tempate {
+.picture-template {
   border-radius: 50%;
-  padding: 0 10px 0 15px;
   background: grey;
+  margin-left: 10px;
 }
 
 .name-template {
   width: 100%;
-  height: 40px;
+  height: 25px;
+  margin-left: 5px;
   background-color: grey;
   border-radius: 0.25cm;
 }
@@ -380,11 +410,11 @@ button:hover {
 
 .user-bubble-message .message {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 .sender-bubble-message .message {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 .message-input-container {
@@ -402,12 +432,16 @@ button:hover {
   margin: 5px 0;
 }
 
-.message-input-container input {
+.message-textarea {
+  display: block;
   width: 100%;
-  padding: 8px;
-  border: 1px solid #ccc;
+  min-height: 20px; /* Set min-height to 20px */
+  max-height: 100px; /* Set a max-height to limit the vertical growth */
+  padding: 5px 3px;
+  border: none;
   border-radius: 0.2cm;
   box-sizing: border-box;
+  resize: none;
 }
 
 .messages-container-chat-not-selected {
